# ArmoniK.CLI

./: .gitignore  .readthedocs.yml  404.html  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
code_docs_gen/: index.html
development/: index.html
docs/: armonik_core.rst  code_docs_gen.md  development.md  development.rst  index.md  installation.rst  usage.md  usage.rst
search/: search_index.json
src/armonik_cli/: cli.py
src/armonik_cli/commands/: __init__.py  cluster.py  config.py  extensions.py  partitions.py  results.py  sessions.py  tasks.py  watch.py
src/armonik_cli/core/: common.py  config.py  configuration.py  decorators.py  input.py  options.py  params.py  serialize.py
tests/: conftest.py  integration.py
tests/commands/: test_partitions.py  test_results.py  test_sessions.py  test_tasks.py  test_watch.py
tests/core/: test_config.py  test_decorators.py  test_input.py  test_options.py
usage/: index.html
